--- a/src/sass/components/_display.scss
+++ b/src/sass/components/_display.scss
@@ -1,28 +1,20 @@
 .display {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(5, 1fr);
-	grid-gap: 10px;
-	place-items: center;
+	@include grid-mother(4, 5, 10px);
+	@include border-radius(20px, 20px, 20px, 20px);
 	height: 400px;
-	background-color: #232c43;
-	border-radius: 20px;
-	margin-top: 2em;
 	padding: 3em;
+	margin-top: 2em;
 	&__btn {
-		height: 50px;
-		width: 110px;
-		border: none;
-		border-radius: 10px;
-		cursor: pointer;
+		@include size(80%, 50px);
+		@include button-behind(none, pointer, null);
+		@include border-radius(10px, 10px, 10px, 10px);
 		font-size: 2rem;
 		transition: 0.3s;
 		&:hover {
 			opacity: 0.8;
 		}
 		&--large {
-			width: 90%;
-			height: 50px;
+			@include size(90%, 50px);
 		}
 		&--large.reset {
 			grid-column: 1/3;
@@ -34,8 +26,5 @@
 }
 
 .action {
-	background-color: hsl(225, 21%, 49%);
-	box-shadow: 0 3px 0 0 hsl(224, 28%, 35%);
-	color: hsl(0, 0%, 100%);
 	text-transform: uppercase;
 }
