--- a/src/sass/components/_result.scss
+++ b/src/sass/components/_result.scss
@@ -1,9 +1,9 @@
 .result {
 	@include flex-mother;
-	justify-content: flex-end;
+	@include border-radius(20px, 20px, 20px, 20px);
 	height: 150px;
+	justify-content: flex-end;
 	background-color: hsl(224, 36%, 15%);
-	border-radius: 20px;
 	&__heading {
 		font-size: 4rem;
 		margin-right: 1em;
