--- a/src/sass/components/_themeSwitcher.scss
+++ b/src/sass/components/_themeSwitcher.scss
@@ -1,47 +1,38 @@
 .theme {
 	@include flex-mother;
+	@include size(40%, 50%);
 	justify-content: space-between;
-	width: 20%;
-	height: 50%;
 	&__heading {
 		text-transform: uppercase;
 		font-size: 1rem;
 	}
 	&__switcher {
 		@include flex-mother;
+		@include size(60%, 50%);
+		@include border-radius(20px, 20px, 20px, 20px);
 		position: relative;
-		width: 60%;
-		height: 50%;
-		border-radius: 20px;
 		background-color: hsl(223, 31%, 20%);
 	}
 	&__btn {
 		@include flex-mother;
-		width: 33%;
-		border: none;
-		height: 100%;
-		cursor: pointer;
-		background: transparent;
+		@include size(33%, 100%);
+		@include button-behind(none, pointer, transparent);
 		z-index: 1;
 		&:nth-child(1) {
-			border-radius: 20px 0 0 20px;
+			@include border-radius(20px, 0, 0, 20px);
 		}
 		&:nth-child(3) {
-			border-radius: 0 20px 20px 0;
+			@include border-radius(0, 20px, 20px, 0);
 		}
 	}
 	&__ball {
-		width: 15px;
-		height: 15px;
-		border-radius: 50%;
+		@include size(15px, 15px);
+		@include border-radius();
 		z-index: 0;
 	}
 	&__paragraphs {
-		width: 100%;
-		height: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: space-around;
+		@include flex-mother(row, center, space-around);
+		@include size(100%, 100%);
 		position: absolute;
 		top: -100%;
 	}
