--- a/src/sass/components/_result.scss
+++ b/src/sass/components/_result.scss
@@ -4,6 +4,9 @@
 	height: 150px;
 	justify-content: flex-end;
 	background-color: hsl(224, 36%, 15%);
+	@media (max-width: 440px) {
+		height: 100px;
+	}
 	&__heading {
 		font-size: 4rem;
 		margin-right: 1em;
