--- a/src/sass/components/_root.scss
+++ b/src/sass/components/_root.scss
@@ -1,9 +1,12 @@
+#root {
+	height: auto;
+	overflow: hidden;
+}
 .main {
 	@include flex-mother();
 	height: 100vh;
 	color: white;
 	@media (max-width: 440px) {
 		align-items: flex-start;
-		overflow: hidden;
 	}
 }
