--- a/src/sass/components/_themeSwitcher.scss
+++ b/src/sass/components/_themeSwitcher.scss
@@ -11,7 +11,7 @@
 		@include size(60%, 50%);
 		@include border-radius(20px, 20px, 20px, 20px);
 		position: relative;
-		background-color: hsl(223, 31%, 20%);
+		min-height: 30px;
 	}
 	&__btn {
 		@include flex-mother;
